--- a/test/Slant.Specs/Slant.Specs.csproj
+++ b/test/Slant.Specs/Slant.Specs.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{62576E5A-8E65-47E6-A862-D1D9458EC273}</ProjectGuid>
+    <ProjectGuid>{0F53E1B2-6B4C-460D-BEFB-EB1BCDB778D4}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Slant.Monad.Tests</RootNamespace>
-    <AssemblyName>Slant.Monad.Tests</AssemblyName>
+    <RootNamespace>Slant.Specs</RootNamespace>
+    <AssemblyName>Slant.Specs</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,12 +30,16 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Monad, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\csharp-monad.0.0.4\lib\Monad.dll</HintPath>
+    <Reference Include="FluentAssertions, Version=4.9.0.0, Culture=neutral, PublicKeyToken=33f2691a05b67b6a, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\FluentAssertions.4.9.0\lib\net45\FluentAssertions.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="nunit.framework, Version=3.2.1.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\NUnit.3.2.1\lib\net45\nunit.framework.dll</HintPath>
+    <Reference Include="FluentAssertions.Core, Version=4.9.0.0, Culture=neutral, PublicKeyToken=33f2691a05b67b6a, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\FluentAssertions.4.9.0\lib\net45\FluentAssertions.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="NSpectator, Version=1.0.1.0, Culture=neutral, PublicKeyToken=6fffe8ec3c7bf466, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\NSpectator.1.0.3\lib\NSpectator.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -48,17 +52,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MonadSuite.cs" />
+    <Compile Include="DebuggerShim.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="src\OptionSpec.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Slant.Monad.Specs\Slant.Monad.Specs.csproj">
-      <Project>{0F53E1B2-6B4C-460D-BEFB-EB1BCDB778D4}</Project>
-      <Name>Slant.Monad.Specs</Name>
+    <ProjectReference Include="..\..\src\Slant\Slant.csproj">
+      <Project>{12cf544b-f65f-45d1-b183-5c7c2299ce28}</Project>
+      <Name>Slant</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
