--- a/src/Slant.Assertions/Slant.Assertions.csproj
+++ b/src/Slant.Assertions/Slant.Assertions.csproj
@@ -60,12 +60,18 @@
     <Compile Include="Expectations\SimpleTimeSpanExpectations.cs" />
     <Compile Include="Expectations\StringExpectations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="..\..\SharedAssemblyInfo.cs">
+      <Link>Properties\SharedAssemblyInfo.cs</Link>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Assertions\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="license.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
