--- a/src/Slant.Assertions/Slant.Assertions.nuspec
+++ b/src/Slant.Assertions/Slant.Assertions.nuspec
@@ -3,24 +3,30 @@
 <metadata>
         <id>Slant.Assertions</id>
         <version>0.9.0</version>
-        <title>Slant</title>
+        <title>Slant Fluent Assertions</title>
         <authors>Slant Development Team</authors>
         <owners>Jonny Novikov</owners>
         <licenseUrl>https://raw.githubusercontent.com/slantdotnet/Slant/master/license.txt</licenseUrl>
         <projectUrl>https://github.com/slantdotnet/Slant</projectUrl>
-        <iconUrl>https://raw.githubusercontent.com/slantdotnet/Slant.Linq/master/src/logo.png</iconUrl>
+        <iconUrl>https://raw.githubusercontent.com/slantdotnet/Slant/master/src/logo.png</iconUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
-        <description>Little more extension methods that allow you to more naturally specify the expected outcome of a xTDD test or specification.</description>
-        <summary>C# for power developers.</summary>
-        <releaseNotes>See github page for details</releaseNotes>
+        <description>A bit more extension methods based on FluentAssertions that allow you to more naturally specify the expected outcome of a xTDD test or specification.</description>
+        <summary>FluentAssertions extensions and expectations.</summary>
+        <releaseNotes>See https://github.com/slantdotnet/Slant for details</releaseNotes>
         <copyright>Copyright (c) Slant Development Team</copyright>
         <language>en-US</language>
-        <tags>testing unit-testing NUnit MSUnit xUnit TDD BDD agile</tags>
+        <tags>assert testing unit-testing NUnit MSUnit xUnit TDD BDD agile</tags>
+        <dependencies>
+            <group targetFramework=".NETFramework4.5">
+                <dependency id="Slant" version="0.9.0" />
+                <dependency id="FluentAssertions" version="4.9.0" />
+            </group>
+        </dependencies>
     </metadata>
   <files>
     <file src="license.txt" />
-    <file src="bin\Release\Slant.Assertions.dll" target="lib\Slant.dll" />
-    <file src="bin\Release\Slant.Assertions.pdb" target="lib\Slant.pdb" />
-    <file src="bin\Release\Slant.Assertions.XML" target="lib\Slant.XML" />
+    <file src="bin\Release\Slant.Assertions.dll" target="lib\Slant.Assertions.dll" />
+    <file src="bin\Release\Slant.Assertions.pdb" target="lib\Slant.Assertions.pdb" />
+    <file src="bin\Release\Slant.Assertions.XML" target="lib\Slant.Assertions.XML" />
   </files>
 </package>
