--- a/src/Slant/Slant.nuspec
+++ b/src/Slant/Slant.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
 <metadata>
         <id>Slant</id>
-        <version>0.9.1</version>
+        <version>2.0.75</version>
         <title>Slant</title>
         <authors>Slant Development Team</authors>
         <owners>Jonny Novikov</owners>
@@ -16,6 +16,11 @@
         <copyright>Copyright (c) Slant Development Team</copyright>
         <language>en-US</language>
         <tags>C# Functional Language Extension Monad Option Immutable Lambda Pattern Matching Tuple Actor</tags>
+        <dependencies>
+            <group targetFramework="net45">
+                <dependency id="System.ValueTuple" version="4.3.1" />
+            </group>
+        </dependencies>
     </metadata>
   <files>
     <file src="license.txt" />
